plugins {
    java
    id("org.springframework.boot") version "3.4.0"
    id("io.spring.dependency-management") version "1.1.6"
    id("info.solidsoft.pitest") version "1.15.0"
}

group = "com.aieducenter"
version = "1.0.0-SNAPSHOT"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starter
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-actuator")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.springframework.boot:spring-boot-starter-data-redis")
    implementation("org.flywaydb:flyway-core:10.18.0")
    implementation("org.flywaydb:flyway-database-postgresql:10.18.0")

    // PostgreSQL Driver
    runtimeOnly("org.postgresql:postgresql:42.7.4")

    // cartisan-core 和 cartisan-web
    implementation("com.cartisan:cartisan-core:0.1.0-SNAPSHOT")
    implementation("com.cartisan:cartisan-web:0.1.0-SNAPSHOT")
    implementation("com.cartisan:cartisan-data-jpa:0.1.0-SNAPSHOT")

    // cartisan-security (Sa-Token)
    implementation("com.cartisan:cartisan-security:0.1.0-SNAPSHOT")

    // Spring Security Crypto (for BCrypt)
    implementation("org.springframework.security:spring-security-crypto:6.3.0")

    // Hutool (for validation)
    implementation("cn.hutool:hutool-core:5.8.29")

    // SpringDoc OpenAPI
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0")

    testImplementation("com.cartisan:cartisan-test:0.1.0-SNAPSHOT")
}

tasks.withType<Test> {
    useJUnitPlatform()
    jvmArgs("--enable-preview")
}

pitest {
    junit5PluginVersion = "1.2.1"
    targetClasses = setOf(
        "com.aieducenter.verification.domain.*",
        "com.aieducenter.verification.application.*",
        "com.aieducenter.verification.web.*",
        "com.aieducenter.verification.infrastructure.*"
    )
    targetTests = setOf(
        "com.aieducenter.verification.*",
        "com.aieducenter.account.config.Authentication*"
    )
    mutators = setOf("DEFAULTS")
    outputFormats = setOf("HTML", "XML")
    mutationThreshold = 70
    jvmArgs = listOf("--enable-preview")
    threads = 2
    timeoutFactor = BigDecimal("2.0")
    timeoutConstInMillis = 10000
}
